<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Изучаем грибы</string>
    <string name="title_home">Дом</string>
    <string name="title_dashboard">хуй</string>
    <string name="title_notifications">уведомления</string>
    <string name="login">войти</string>
    <string name="password">пароль</string>
    <string name="password_capital">Пароль</string>
    <string name="login_capital">Войти</string>
    <string name="username_capital">Имя пользователя</string>
    <string name="username">имя пользователя</string>

    <string name="sign_up">Регистрация</string>
    <string name="e_mail">Email</string>
    <string name="email">email</string>
    <string name="catalog">Каталог</string>
    <string name="map">Карты</string>
    <string name="title_recognition">Распознавание</string>
    <string name="title_notes">Заметки</string>

    <string name="location_permission_toast">Turn on location</string>

    <string name="edible_mushroom">Съедобный</string>
    <string name="halfedible_mushroom">Полусъедобный</string>
    <string name="inedible_mushroom">Несъедобный</string>

    <string name="ellipsised_description_template" formatted="true">%1$s…</string>

    <string name="proba_template" formatted="true">Уверенность %1$.3f\%</string>

    <string name="search_title">Поиск</string>

    <string name="mushrooms_error_template" formatted="true">Failed to load mushrooms, error %1$s</string>
    <string name="notes_error_template" formatted="true">Failed to load notes, error %1$s</string>

    <string name="validation_error_template" formatted="true">Неверные данные регистрации. %1$s</string>
    <string name="username_error_template" formatted="true">Некорректное имя пользователя:
        должно иметь не менее 6 символов и состоять только из цифр и латинских букв</string>
    <string name="email_error_template" formatted="true">Некорректный формат электронной почты</string>
    <string name="password_error_template" formatted="true">Некорректный пароль:
        должен иметь не менее 8 символов, хотя бы одну цифру и заглавную и строчную букву</string>

    <string name="photo_new_mushroom_label">Сфотографировать новый гриб</string>
    <string name="choose_from_local_storage_label">Выбрать из локального хранилища</string>
    <string name="recognition_label">Скорее всего это…</string>

    <string name="remember_place_location">Запомнить место?</string>
    <string name="use_current_location">Использовать текущую геолокацию</string>
    <string name="use_picture_location">Использовать данные о геолокации картинки</string>

    <string name="confirm_button_text">Да</string>
    <string name="dismiss_button_text">Отмена</string>

    <string name="place_success">Место добавлено</string>
    <string name="place_error">Что-то пошло не так, место не добавлено</string>


    <string name="register_error_template">Регистрация не прошла успешно. %1$s</string>
    <string name="register_success">Регистрация прошла успешно</string>
    <string name="register_error">Что-то пошло не так.
        Возможно, такое имя пользователя или электронная почта уже зарегистрированы. </string>

    <string name="login_error_template">Вход не совершен. %1$s</string>
    <string name="login_success">Вход совершен успешно</string>
    <string name="login_error">Что-то пошло не так при аутентификации.
        Проверьте данные и попробуйте еще раз.</string>
</resources>
