<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="ru.studymushrooms.ui.catalog.CatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_catalog">
        <action
            android:id="@+id/navigate_to_login_fragment"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recognition"
        android:name="ru.studymushrooms.ui.recognize.RecognitionFragment"
        android:label="@string/title_recognition"
        tools:layout="@layout/fragment_recognition" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="ru.studymushrooms.ui.maps.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="ru.studymushrooms.ui.auth.LoginFragment"
        android:label="@string/login_capital"
        tools:layout="@layout/login_fragment" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="ru.studymushrooms.ui.notes.NotesFragment"
        android:label="Заметки"
        tools:layout="@layout/notes_fragment">
        <action
            android:id="@+id/navigate_to_note_creation"
            app:destination="@id/create_note_navigation" />
    </fragment>
    <fragment
        android:id="@+id/create_note_navigation"
        android:name="ru.studymushrooms.ui.notes.CreateNoteFragment"
        android:label="Создание заметки"
        tools:layout="@layout/fragment_view_note">

    </fragment>
</navigation>
