<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recognize.RecognitionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recognize_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_new_mushroom_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recognize_storage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_local_storage_label" />

        <ImageView
            android:id="@+id/recognize_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/recognize_photo_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recognize_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognition_label"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recognize_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>